--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,11 @@
  <li class="nav-item"> <%= link_to 'Home', root_path %> </li> 
 
   
- <li class="nav-item"> <%= link_to 'Cars', cars_path %> </li> 
+ <%
+=begin%>
+ <li class="nav-item"> <%= link_to 'Cars', cars_path %> </li>  
+<%
+=end%>
 
 
     <%
@@ -23,7 +27,8 @@
     
     <% if user_signed_in? %>
     <li> <%= current_user.email %> </li>
-      <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete%> </li>
+      <li> <%= link_to 'Logout', destroy_user_session_path, method: :delete%> </li> 
+      <li > <%= link_to 'Cars', cars_path%> </li> 
       <% else %>
       <li> <%= link_to 'Login', new_user_session_path %> </li>
      
